MDHS-13: Prevent footer from exceeding more than the pages's width causing horizontal scroll.

--- a/src/main/resources/public/app/sass/organisms/_site-footer.scss
+++ b/src/main/resources/public/app/sass/organisms/_site-footer.scss
@@ -1,4 +1,8 @@
-.site-footer__top {
+.site-footer__top{
+  @extend .container-fluid;
+}
+
+.site-footer__top-row{
   @extend .row;
 }
 
